--- a/Aula2/aula2-1.html
+++ b/Aula2/aula2-1.html
@@ -17,13 +17,13 @@
       #corpo {
         background-color: red;
         width: 600px;
-        padding: 10px;
+        padding: 10px 2%;
       }
 
       #rodape {
         background-color: black;
         width: 600px;
-        padding: 10px;
+        padding: 10px 2%;
         color: wheat;
         text-align: center;
       }
