--- a/Aula-Javascript/while/index.html
+++ b/Aula-Javascript/while/index.html
@@ -15,6 +15,7 @@
       </p>
 
       <button id="jogar">Começar</button>
+      <p class="status" id="status">Clique em "Jogar" para começar</p>
 
       <div class="status"></div>
 
